--- a/mdk/Objects/stm32f407.build_log.htm
+++ b/mdk/Objects/stm32f407.build_log.htm
@@ -21,24 +21,20 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-G:\STM32_project\weather_clock\clock_basic_plus\01_LED\mdk\stm32f407.uvprojx
-Project File Date:  08/17/2025
+G:\STM32_project\weather_clock\clock_basic_plus\weather_clock\mdk\stm32f407.uvprojx
+Project File Date:  10/18/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'G:\keil 5\ARM\ARMCC\Bin'
 Build target 'demo'
-compiling main.c...
-..\app\inc\board.h(14): warning:  #1-D: last line of file ends without a newline
+compiling board.c...
+..\driver\usart\usart.h(14): warning:  #1-D: last line of file ends without a newline
   #endif
-..\app\inc\main.h(6): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\app\main.c(24): warning:  #1-D: last line of file ends without a newline
-  }
-..\app\main.c: 3 warnings, 0 errors
+..\app\board.c: 1 warning, 0 errors
 linking...
-Program Size: Code=1012 RO-data=460 RW-data=20 ZI-data=1028  
+Program Size: Code=3100 RO-data=424 RW-data=24 ZI-data=1024  
 FromELF: creating hex file...
-".\Objects\stm32f407.axf" - 0 Error(s), 3 Warning(s).
+".\Objects\stm32f407.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
