--- a/mdk/Objects/stm32f407.build_log.htm
+++ b/mdk/Objects/stm32f407.build_log.htm
@@ -22,12 +22,29 @@ Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 G:\STM32_project\weather_clock\clock_basic_plus\weather_clock\mdk\stm32f407.uvprojx
-Project File Date:  10/31/2025
+Project File Date:  11/02/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'G:\keil_5\ARM\ARMCC\Bin'
 Build target 'demo'
-".\Objects\stm32f407.axf" - 0 Error(s), 0 Warning(s).
+compiling wifi_page.c...
+..\driver\lcd\fonts.h(31): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\driver\lcd\image.h(27): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\driver\lcd\lcd.h(125): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\app\include\ui.h(17): warning:  #1-D: last line of file ends without a newline
+  #endif 
+..\app\include\app.h(18): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\app\pages\wifi_page.c(18): warning:  #167-D: argument of type "const char *" is incompatible with parameter of type "const uint8_t *"
+      ui_write_string(start_x, 240, ssid, &font32_maple, 1, WHITE, BLACK);
+..\app\pages\wifi_page.c: 6 warnings, 0 errors
+linking...
+Program Size: Code=35132 RO-data=251364 RW-data=288 ZI-data=97736  
+FromELF: creating hex file...
+".\Objects\stm32f407.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -40,7 +57,7 @@ Package Vendor: Keil
   G:\keil_5\Keil\STM32F4xx_DFP\2.15.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
